changes in application file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 spring.application.name=EmpMS
 
-server.port =8085
+server.port =8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/empdb
-spring.datasource.username =root
-spring.datasource.password =Root
-
+#spring.datasource.url=jdbc:mysql://localhost:3306/empdb
+#spring.datasource.username =root
+#spring.datasource.password =Root
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/mydb}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:Root}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql =true
 
